--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [AWS]
-AWS_ACCESS_KEY_ID=AKIA557Q562U2KB2CGFV
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=‘key’
+AWS_SECRET_ACCESS_KEY='secret'
 
 [S3]
 IMMI_DATA = s3a://my-udacity-aws-bucket2046/ i94_jun16_sub.sas7bdat
