modified as per review

--- a/config.cfg
+++ b/config.cfg
@@ -3,7 +3,7 @@ AWS_ACCESS_KEY_ID=‘key’
 AWS_SECRET_ACCESS_KEY='secret'
 
 [S3]
-IMMI_DATA = s3a://my-udacity-aws-bucket2046/ i94_jun16_sub.sas7bdat
+IMMI_DATA = s3a://my-udacity-aws-bucket2046/i94_jun16_sub.sas7bdat
 DEMO_DATA = s3a://my-udacity-aws-bucket2046/us-cities-demographics.csv
 AIRPORT_DATA = s3a://my-udacity-aws-bucket2046/airport-codes_csv.csv
 COUNTRY_DATA = s3a://my-udacity-aws-bucket2046/iso_country_code.csv
